Trying to get alignment and more of the elements to display correctly.

--- a/css/marketing.css
+++ b/css/marketing.css
@@ -200,6 +200,8 @@
     .footer {
         background: #111;
         color: #aaa;
+        width: 100%;
+        letter-spacing: 0em;
     }
 
     /*
